--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -5,17 +5,29 @@ $mediumfont: 500;
 $heavyfont: 900;
 
 $primaryc: #f2f2f2;
+$black: #000000;
 $secondaryc: #dddddd;
 $bugc: red;
 //Mixins
 @mixin circular {background:$secondaryc;border-radius:50%;margin:20px auto;}
 
+//Navigation
+header {height: 61px;position: fixed;top: 0;transition: top 0.2s ease-in-out;width: 100%;z-index:100;
+img {width:200px;}}
+.nav-up {top:-61px;}
+#site-menu {width: 30%;height: 100%;position: absolute;top: 0;left: -30%;padding:60px 15px;background:$secondaryc;}
+
+
 //Main containers
-body {padding:50px 0 0 0;font-family: $font;overflow-x:hidden;}
+body {padding:61px 0 0 0;font-family: $font;overflow-x:hidden;}
+#site-wrapper {position: relative;overflow: hidden;width: 100%;top: -61px;}
+#site-canvas {width: 100%;height: 100%;position: relative;-webkit-transform: translateX(0);transform: translateX(0);-webkit-transition: .3s ease all;transition: .3s ease all;}
+.container {}
 
 .hero {min-height:94vh;padding-top:34vh;}
 .strategy, .test, .design, .product, .team {min-height:94vh;padding-top:34vh;}
 .introduction, .challenge, .solution {min-height:31.25vh;}
+
 //Sub containers
 .strategy-image, .test-image, .design-image {height:300px;background:$primaryc;}
 .product-image {@include circular;width:300px;height:300px;}
@@ -23,3 +35,15 @@ body {padding:50px 0 0 0;font-family: $font;overflow-x:hidden;}
 
 //cta
 .cta {padding:10px 10px 5px 10px;background:$primaryc;position:fixed;right:0;bottom:40px;}
+
+//leftmenu animation
+#site-wrapper.show-nav #site-canvas {-webkit-transform: translateX(30%);transform: translateX(30%);}
+//burgermenu animation
+.menu {cursor: pointer;margin: 20px 0 0 0;padding-left: 1.25em;position: relative;width: 30px;height: 20px;}
+.menu-global {backface-visibility: hidden;position: absolute;left: 0;border-top: 3px solid $black;width: 100%;transition: 0.55s;}
+.menu-top {top: 0;}
+.menu-middle {top: 10px;}
+.menu-bottom {top: 20px;}
+.menu-top-click {backface-visibility: hidden;top: 15px;transform: rotate(45deg);transition: 1.25s 0.2s;}
+.menu-middle-click {opacity: 0;}
+.menu-bottom-click {backface-visibility: hidden;top: 15px;transform: rotate(-405deg);transition: 1.25s 0.2s;}
