--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -17,16 +17,13 @@ img {width:200px;}}
 .nav-up {top:-61px;}
 #site-menu {width: 30%;height: 100%;position: absolute;top: 0;left: -30%;padding:60px 15px;background:$secondaryc;}
 
-
 //Main containers
-body {padding:61px 0 0 0;font-family: $font;overflow-x:hidden;}
-#site-wrapper {position: relative;overflow: hidden;width: 100%;top: -61px;}
-#site-canvas {width: 100%;height: 100%;position: relative;-webkit-transform: translateX(0);transform: translateX(0);-webkit-transition: .3s ease all;transition: .3s ease all;}
+body {padding:0 0 0 0;font-family: $font;overflow-x:hidden;}
 .container {}
 
 .hero {min-height:94vh;padding-top:34vh;}
-.strategy, .test, .design, .product, .team {min-height:94vh;padding-top:34vh;}
-.introduction, .challenge, .solution {min-height:31.25vh;}
+.strategy, .test, .design, .product, .team {min-height:300px;}
+.introduction, .challenge, .solution {min-height:300px;}
 
 //Sub containers
 .strategy-image, .test-image, .design-image {height:300px;background:$primaryc;}
@@ -37,7 +34,8 @@ body {padding:61px 0 0 0;font-family: $font;overflow-x:hidden;}
 .cta {padding:10px 10px 5px 10px;background:$primaryc;position:fixed;right:0;bottom:40px;}
 
 //leftmenu animation
-#site-wrapper.show-nav #site-canvas {-webkit-transform: translateX(30%);transform: translateX(30%);}
+
+
 //burgermenu animation
 .menu {cursor: pointer;margin: 20px 0 0 0;padding-left: 1.25em;position: relative;width: 30px;height: 20px;}
 .menu-global {backface-visibility: hidden;position: absolute;left: 0;border-top: 3px solid $black;width: 100%;transition: 0.55s;}
@@ -47,3 +45,20 @@ body {padding:61px 0 0 0;font-family: $font;overflow-x:hidden;}
 .menu-top-click {backface-visibility: hidden;top: 15px;transform: rotate(45deg);transition: 1.25s 0.2s;}
 .menu-middle-click {opacity: 0;}
 .menu-bottom-click {backface-visibility: hidden;top: 15px;transform: rotate(-405deg);transition: 1.25s 0.2s;}
+
+//fullpage slider
+html {overflow-y: hidden;}
+
+html, body, #wrapper {height: 100%;width: 100%;margin: 0;}
+
+nav {position: fixed;z-index: 100;right:0;top:200px;}
+
+.main-container {position: relative;width: 100%;height: 100%;}
+
+#wrapper {position: absolute;top: 0;-webkit-transition: -webkit-transform 1.5s cubic-bezier(.8,0,.2,1);}
+
+.slide0 {-webkit-transform: translateY(0%);}
+.slide1 {-webkit-transform: translateY(-100%);}
+.slide2 {-webkit-transform: translateY(-200%);}
+.slide3 {-webkit-transform: translateY(-300%);}
+.slide4 {-webkit-transform: translateY(-400%);}
